--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/about.css">
+    <link rel="stylesheet" href="./css/about.css">
     <title>About</title>
     <script src="https://kit.fontawesome.com/4634241602.js" crossorigin="anonymous"></script>
 </head>
